--- a/assets/css/com.css
+++ b/assets/css/com.css
@@ -225,12 +225,13 @@ tr {
   .video-player {
     margin-top: 0 !important;
   }
-}
-.my-4 {
+  .my-4 {
   font-family: 'Montserrat', helvetica, arial, sans-serif;
   font-size: 25px;
   font-weight: 800;
 }
+}
+
 .a-btn {
       text-decoration: none;
       -webkit-font-smoothing: antialiased;
@@ -267,7 +268,7 @@ tr {
       white-space: normal; 
       font-size: 25px;
       color: #ffffff; 
-      font-family: Oswald; 
+      font-family: montserrat; 
       font-weight: bold; 
       text-shadow: #000000 0px 1px 0px;
       text-decoration: none;
