--- a/assets/css/com.css
+++ b/assets/css/com.css
@@ -36,6 +36,10 @@ body {
   font-size: 16px;
 }
 
+.py-4 {
+  padding-bottom: 
+}
+
 
 .bbtn {
   width: 100%;
@@ -111,3 +115,11 @@ body {
       font-style: italic;
       text-shadow: #000000 0px 1px 0px;
     }
+
+.container{
+  padding-bottom:70px;
+}
+.pessoas-assistindo{
+	padding-top: 10px;
+	font-size: 17px;
+}
