--- a/assets/css/com.css
+++ b/assets/css/com.css
@@ -36,9 +36,6 @@ body {
   font-size: 16px;
 }
 
-.py-4 {
-  padding-bottom: 
-}
 
 
 .bbtn {
@@ -120,6 +117,6 @@ body {
   padding-bottom:70px;
 }
 .pessoas-assistindo{
-	padding-top: 10px;
-	font-size: 17px;
+	margin-top: 20px;
+	font-size: 16px;
 }
